Configure provider/model in .goose-config.yml instead of env vars
- Updated src/main/resources/.goose-config.yml to include:
  - provider: openai
  - model: gpt-4o
- Removed redundant root-level .goose-config.yml
- Updated manifest.yml to remove GOOSE_PROVIDER/GOOSE_MODEL env vars
  (buildpack parses these from config file and exports them)
- Controller already reads GOOSE_PROVIDER/GOOSE_MODEL from environment

--- a/manifest.yml
+++ b/manifest.yml
@@ -9,10 +9,8 @@ applications:
     env:
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 21.+ } }'
       GOOSE_ENABLED: true
-      # Provider configuration - set provider type and model
-      GOOSE_PROVIDER: openai
-      GOOSE_MODEL: gpt-4o
-      # API key for the configured provider:
+      # Provider/model configuration is in .goose-config.yml (src/main/resources)
+      # API key for the configured provider (set via CredHub or cf set-env):
       # ANTHROPIC_API_KEY: ((ANTHROPIC_API_KEY))
       OPENAI_API_KEY: ((OPENAI_API_KEY))
       # GOOGLE_API_KEY: ((GOOGLE_API_KEY))
